src/styles/app.styl
@import "vendor/normalize";
@import "vendor/skeleton";
@import "_loader";

html, body {
  height: 100%;
}

body {
  transform: translateZ(0);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  color: #555;
  font-family: sans-serif;
}

.image-wrapper img {
  width: 100%;
  display: block;
}

.games {
  position: relative;
  width: 100%;
  height: 100%;
}

@media screen and (max-width: 800px) {
  .game-image {
    display: none;
  }
}

#chart {
  position: absolute;
  top: 0;
  right: 0
  bottom: 0;
  left: 0;
  z-index: -1;
}

#chart path {
  stroke: #fff;
}

path {
  transition: opacity 0.2s ease-out;
  cursor: pointer;
}

.active path {
  opacity: 0.3;
}

.active path.current {
  opacity: 1;
}

.zoomed path.game {
  opacity: 0;
}

#explanation {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  margin: auto;
  left: 0;
  right: 0;
  width: 140px;
  text-align: center;
  color: #666;
}
#percentage {
  font-size: 2.5em;
}

